Add OpenAPI/Swagger UI

--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -5,7 +5,6 @@ spring:
     exclude: # prevent issues with Spring searching for database while we have not discussed Docker in the lectures yet
       - org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
   #datasource:
   #  driver-class-name: org.postgresql.Driver
   #flyway:
@@ -13,8 +12,8 @@ spring:
   #  locations: classpath:db/migration
   #  validate-on-migrate: true
 
-#springdoc:
-#    api-docs:
-#        path: /api-docs
-#    swagger-ui:
-#        path: /swagger-ui.html
+springdoc:
+    api-docs:
+        path: /api-docs
+    swagger-ui:
+        path: /swagger-ui.html
